git added arrow

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ ul {
 
 @media screen and (max-width: 576px) {
   .container {
-    width: 100%;
+    max-width: 576px;
   }
 }
 
@@ -402,6 +402,18 @@ button {
   }
   .panel-get-description {
     margin-top: 0px;
+  }
+  .svg-arrow {
+    margin-left: 290px;
+    margin-top: -35px;
+    width: 27px;
+    height: 27px;
+  }
+  .svg-video-arrow {
+    margin-left: 190px;
+    margin-top: 20px;
+    width: 26px;
+    height: 26px;
   }
 }
 
