--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -212,4 +212,16 @@ margin-bottom:28px
 .panel-get-description{
   margin-top: 0px;
 }
+.svg-arrow{
+  margin-left: 290px;
+    margin-top: -35px;
+    width: 27px;
+    height: 27px;
+}
+.svg-video-arrow{
+  margin-left: 190px;
+  margin-top: 20px;
+  width: 26px;
+  height: 26px;
+}
 }
