--- a/sass/general/_container.scss
+++ b/sass/general/_container.scss
@@ -13,6 +13,7 @@ ul{
 .container{
   margin-left: auto;
   margin-right: auto;
+
 @media screen and (min-width:1200px) {
       max-width:1200px;
       padding-left: 100px;
@@ -21,7 +22,7 @@ ul{
   }
 
   @media screen and (max-width:576px) {
-width: 100%;
+max-width: 576px;
 }
 }
 * {
