--- a/sass/components/_text-product-description.scss
+++ b/sass/components/_text-product-description.scss
@@ -12,10 +12,8 @@ h2{
     font-weight: 500;
     color: #000;
   }
-  p:first-child{
+  p{
     margin-bottom: 26px;
   }
-  p:last-child{
-    margin-bottom: 25px;
-  }
+
 }
