--- a/sass/utils/_utils.scss
+++ b/sass/utils/_utils.scss
@@ -4,3 +4,4 @@ $purple-text-color: #603cba;
 $green-text-color: #01a31c;
 $carrot-text-color: #d44a26;
 $orange-text-color: #f0a427;
+$spacer: 9.333px
