--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,7 @@ ul {
   list-style-type: none;
 }
 
-.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
-  padding: 0px;
-  margin: 0px;
-}
-
-.d-flex, .navbar, h1, h2, p, .row {
+.navbar {
   padding: 0px;
   margin: 0px;
 }
@@ -17,45 +12,23 @@ ul {
   margin-right: auto;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 720px) {
   .container {
-    max-width: 1200px;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 70px;
+    padding-right: 70px;
   }
 }
 
-@media screen and (max-width: 576px) {
-  .container {
-    max-width: 576px;
-  }
+.mt-5 {
+  margin-top: 27.999px !important;
 }
 
-* {
-  margin: 0;
-  padding: 0;
+.ml-5 {
+  margin-left: 27.999px !important;
 }
 
 button {
   cursor: pointer;
-}
-
-.interface {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.block-img {
-  width: 486px;
-  height: 310px;
-  border: 3px solid #f1f1f1;
-  padding-top: 32px;
-}
-
-.block-img .img-biovoid {
-  width: 448px;
-  height: 243px;
 }
 
 .navbar-nav .nav-item .nav-link {
@@ -87,20 +60,6 @@ button {
   text-align: center;
 }
 
-.navbar-nav {
-  margin-left: 159px;
-}
-
-.border-blue {
-  border-bottom: 1px solid #007bff;
-  width: 106px;
-}
-
-.border-purple {
-  border-bottom: 1px solid #603cba;
-  width: 114px;
-}
-
 @media screen and (min-width: 1200px) {
   .navbar {
     margin-top: 29px;
@@ -108,7 +67,7 @@ button {
   .border-purple:after {
     content: '';
     position: absolute;
-    left: 26%;
+    left: 0%;
     right: 0;
     margin: 0 auto;
     width: 0;
@@ -117,6 +76,17 @@ button {
     border-left: 9px solid transparent;
     border-right: 9px solid transparent;
   }
+}
+
+.border-purple {
+  position: relative;
+  border-bottom: 1px solid #603cba;
+  width: 114px;
+}
+
+.border-blue {
+  border-bottom: 1px solid #007bff;
+  width: 106px;
 }
 
 .border-green {
@@ -134,16 +104,7 @@ button {
   width: 112px;
 }
 
-@media screen and (max-width: 1199px) {
-  .navbar-nav {
-    margin-left: 140px;
-  }
-}
-
 @media screen and (max-width: 978px) {
-  .nav-link {
-    font-size: 18px;
-  }
   .border-blue, .border-purple, .border-green, .border-carrot, .border-orange {
     border: none;
     margin-left: 0px;
@@ -151,9 +112,6 @@ button {
 }
 
 @media screen and (max-width: 576px) {
-  .navbar-nav {
-    margin-left: 0px;
-  }
   .header-logo {
     width: 100px;
     height: auto;
@@ -185,7 +143,7 @@ button {
   color: #f0a427;
 }
 
-.link-heading h1 {
+h1 {
   font-family: "Segoe UI Light";
   font-size: 36px;
   font-weight: 400;
@@ -194,17 +152,8 @@ button {
   line-height: 1.389;
 }
 
-@media screen and (min-width: 1200px) {
-  .link-heading:nth-child(2) {
-    margin-left: 79px;
-  }
-  .link-heading:last-child {
-    margin-left: 28px;
-  }
-}
-
 @media screen and (max-width: 978px) {
-  .link-heading h1 {
+  h1 {
     font-size: 35px;
   }
   .link-heading {
@@ -236,7 +185,7 @@ button {
   font-weight: 400;
 }
 
-.btn-dovnload-price p {
+.btn-dovnload-price span {
   margin-left: 11px;
   border-bottom: 1px solid #FFF;
 }
@@ -261,16 +210,9 @@ button {
   margin-top: 23px;
 }
 
-.interface {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 20px;
-}
-
 .btn-description {
   background-color: #603cba;
-  width: 486px;
+  width: 100%;
   height: 114px;
   border: none;
   color: #FFF;
@@ -345,32 +287,9 @@ button {
 }
 
 .block-img {
-  width: 100%;
   height: auto;
   border: 3px solid #f1f1f1;
-  padding-top: 32px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.block-img .img-biovoid {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  height: auto;
-}
-
-.panel-get-description {
-  margin-top: 28px;
-}
-
-.panel-get-description > li:last-child {
-  margin-left: 28px;
-}
-
-.panel-get-description ul li:first-child {
-  margin-bottom: 28px;
+  padding: 28px 16px 32px 16px;
 }
 
 .svg-description {
@@ -408,25 +327,11 @@ button {
   margin-right: auto;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 720px) {
   .btn-description, .btn-download, .btn-example, .btn-video {
-    width: 350px;
+    width: 100%;
     height: 70px;
-    margin-bottom: 28px;
-  }
-  .interface {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .panel-get-description {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .panel-get-description > li:last-child {
-    margin-left: 0px;
-  }
-  .panel-get-description {
-    margin-top: 0px;
+    margin-bottom: 10px;
   }
   .svg-arrow {
     margin-left: 290px;
@@ -443,8 +348,8 @@ button {
 }
 
 .product-description h2 {
-  margin-bottom: 16px;
   font-size: 24px;
+  line-height: 18px;
   font-family: "Segoe UI Light";
   font-weight: 400;
   color: #000;
@@ -453,35 +358,31 @@ button {
 .product-description p {
   font-size: 14px;
   font-family: "Segoe UI";
-  font-weight: 500;
+  font-weight: 400;
   color: #000;
-}
-
-.product-description p {
-  margin-bottom: 26px;
+  line-height: 18px;
 }
 
 .list-product-description > li {
   padding: 1px 1px 1px 0px;
-  margin-bottom: 28px;
 }
 
 .list-product-description > li div {
-  padding: 17px 28px 15px 17px;
+  padding: 16px 28px 15px 14px;
   background-color: #FFF;
 }
 
 .list-product-description > li div p {
   font-size: 14px;
   font-family: "Segoe UI";
-  font-weight: 500;
+  font-weight: 400;
   color: #000;
+  line-height: 18px;
 }
 
 .list-product-description > li div h3 {
   font-size: 24px;
   font-family: "Segoe UI Light";
-  font-weight: 400;
 }
 
 .list-product-description > li:first-child {
@@ -518,7 +419,6 @@ button {
 }
 
 .form-footer {
-  margin-bottom: 28px;
   background-color: #f1f1f1;
   padding: 18px 11px 17px 23px;
 }
@@ -562,7 +462,6 @@ footer > div {
   padding: 16px 0px 13px 16px;
   background-color: #c3325f;
   font-size: 18px;
-  font-weight: 400;
   font-family: "Segoe UI Light";
   color: #FFF;
   line-height: 18px;
