--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -20,18 +20,10 @@
 .navbar .nav-item{
   text-align: center;
 }
-.navbar-nav {
-  margin-left:159px ;
-}
+
 // menu nav
-.border-blue{
-  border-bottom: 1px solid $blue-text-color;
-  width: 106px;
-}
-.border-purple{
-  border-bottom: 1px solid $purple-text-color;
-  width: 114px;
-}
+
+
 @media screen and (min-width:1200px){
   .navbar{
     margin-top: 29px;
@@ -39,7 +31,7 @@
 .border-purple:after {
   content:'';
   position: absolute;
-  left: 26%;
+  left: 0%;
   right: 0;
   margin: 0 auto;
   width: 0;
@@ -48,6 +40,15 @@
   border-left: 9px solid transparent;
   border-right: 9px solid transparent;
 }
+}
+.border-purple{
+  position: relative;
+  border-bottom: 1px solid $purple-text-color;
+  width: 114px;
+}
+.border-blue{
+  border-bottom: 1px solid $blue-text-color;
+  width: 106px;
 }
 .border-green{
   border-bottom: 1px solid $green-text-color;
@@ -61,29 +62,20 @@
   border-bottom: 1px solid $orange-text-color;
   width: 112px;
 }
-@media screen and (max-width:1199px) {
-  .navbar-nav {
-    margin-left: 140px;
-}
-}
+
 @media screen and (max-width:978px) {
-.nav-link{
-  font-size: 18px;
-}
 .border-blue, .border-purple, .border-green, .border-carrot, .border-orange {
   border: none;
   margin-left: 0px;
 }
 }
 @media screen and (max-width:576px) {
-  .navbar-nav{
-    margin-left: 0px;
-  }
   .header-logo{
     width: 100px;
   height: auto;
   }
 }
+
 // focus hover nav-menu
 
 .navbar-nav .nav-item:first-child .nav-link:focus,
