--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 //top panel hero
 
-.link-heading h1{
+h1{
   font-family: "Segoe UI Light";
     font-size: 36px;
     font-weight: 400;
@@ -8,17 +8,9 @@
     text-align: left;
     line-height: 1.389;
 }
-@media screen and (min-width:1200px) {
-  .link-heading:nth-child(2){
-    margin-left: 79px;
-    }
-    .link-heading:last-child{
-      margin-left: 28px;
-    }
-}
 
 @media screen and (max-width:978px) {
-  .link-heading h1 {
+   h1 {
     font-size: 35px;
   }
   .link-heading {
@@ -44,7 +36,7 @@
   display: flex;
   font-size: 12px;
 font-weight: 400;
-  p{
+ span{
     margin-left: 11px;
     border-bottom: 1px solid #FFF;
   }
@@ -65,18 +57,13 @@ font-weight: 400;
   align-items: center;
   margin-top:23px ;
   }
-// the bottom panel hero
-.interface{
-  justify-content: space-between;
-  margin-top: 20px;
-}
+
 .btn-description{
   background-color: $purple-text-color;
-  width: 486px;
+  width: 100%;
   height: 114px;
   border: none;
   color: #FFF;
-  // padding: 15px 17px 16px 16px;
   text-align: left;
   padding-top: 15px;
   padding-left: 16px;
@@ -138,29 +125,11 @@ margin-left: 12px;
 }
 
 .block-img{
-  width: 100%;
   height: auto;
   border:3px solid #f1f1f1;
-  padding-top: 32px;
-  margin-left: auto;
-  margin-right: auto;
-.img-biovoid{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-width: 100%;
-height: auto;
+  padding: 28px 16px 32px 16px;
 }
-}
-.panel-get-description{
-  margin-top: 28px;
- &>li:last-child{
-    margin-left:28px
-  }
-  & ul li:first-child{
-margin-bottom:28px
-  }
-}
+
 // sprite
 .svg-description{
   width:38px ;
@@ -192,26 +161,14 @@ margin-bottom:28px
   margin-right: auto;
 }
 
-@media screen and (max-width:576px) {
+@media screen and (max-width:720px) {
 .btn-description, .btn-download, .btn-example, .btn-video{
-  width: 350px;
+  width: 100%;
   height:70px ;
-  margin-bottom: 28px;
+  margin-bottom: 10px;
+}
 
-}
-.interface{
-  margin-left: auto;
-  margin-right: auto;
-}
-.panel-get-description{
-  flex-wrap: wrap
-}
-.panel-get-description>li:last-child {
-  margin-left: 0px;
-}
-.panel-get-description{
-  margin-top: 0px;
-}
+
 .svg-arrow{
   margin-left: 290px;
     margin-top: -35px;
