--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -1,16 +1,16 @@
-@font-face {
-  font-family: 'Segoe UI Light';
-  font-style: normal;
-  font-weight: 400;
-  src: local(''),
-       url('../../fonts/segoeUILight.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+// @font-face {
+//   font-family: 'Segoe UI Light';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: local(''),
+//        url('../../fonts/segoeUILight.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 
-}
-@font-face {
-  font-family: 'Segoe UI';
-  font-style: normal;
-  font-weight: 500;
-  src: local(''),
-       url('../../fonts/SegoeUI.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+// }
+// @font-face {
+//   font-family: 'Segoe UI';
+//   font-style: normal;
+//   font-weight: 500;
+//   src: local(''),
+//        url('../../fonts/SegoeUI.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 
-}
+// }
