--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,5 @@
 @import './components/hero';
 @import './components/text-product-description';
 @import './components/peculiarities-product';
-@import './components/footer';
+@import './components/section-form';
+@import './components/footer'
