--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,100 +1,118 @@
 // navbar
-.navbar-nav .nav-item .nav-link{
+.navbar-nav .nav-item .nav-link {
     font-size: 16px;
     color: rgb(0, 0, 0);
     font-family: "Segoe UI";
 }
-.header-logo{
-  width: 302px;
-  height: 53px;
-}
-.navbar{
-  align-items: flex-end;
-  .nav-item:not(:first-child){
-    margin-left: 5px;
-  }
-  .navbar-brand{
-    margin: 0px;
-  }
-}
-.navbar .nav-item{
-  text-align: center;
-}
 
-// menu nav
-
-
-@media screen and (min-width:1200px){
-  .navbar{
+.navbar {
     margin-top: 29px;
-  }
-.border-purple:after {
-  content:'';
-  position: absolute;
-  left: 0%;
-  right: 0;
-  margin: 0 auto;
-  width: 0;
-  height: 0;
-  border-top: 5px solid $purple-text-color;
-  border-left: 9px solid transparent;
-  border-right: 9px solid transparent;
-}
-}
-.border-purple{
-  position: relative;
-  border-bottom: 1px solid $purple-text-color;
-  width: 114px;
-}
-.border-blue{
-  border-bottom: 1px solid $blue-text-color;
-  width: 106px;
-}
-.border-green{
-  border-bottom: 1px solid $green-text-color;
-  width: 95px;
-}
-.border-carrot{
-  border-bottom: 1px solid $carrot-text-color;
-  width: 92px;
-}
-.border-orange{
-  border-bottom: 1px solid $orange-text-color;
-  width: 112px;
 }
 
-@media screen and (max-width:978px) {
-.border-blue, .border-purple, .border-green, .border-carrot, .border-orange {
-  border: none;
-  margin-left: 0px;
+.header-logo {
+    width: 302px;
+    height: 53px;
 }
+
+.navbar {
+    align-items: flex-end;
+    .nav-item:not(:first-child) {
+        margin-left: 5px;
+    }
+    .navbar-brand {
+        margin: 0px;
+        padding: 0px
+    }
 }
-@media screen and (max-width:576px) {
-  .header-logo{
-    width: 100px;
-  height: auto;
-  }
+
+.border-purple {
+    position: relative;
+    border-bottom: 1px solid $purple-text-color;
+}
+
+.border-purple:after {
+    content: '';
+    position: absolute;
+    margin: 0 auto;
+    width: 0;
+    height: 0;
+    border-top: 5px solid $purple-text-color;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+}
+
+.border-blue {
+    border-bottom: 1px solid $blue-text-color;
+}
+
+.border-green {
+    border-bottom: 1px solid $green-text-color;
+}
+
+.border-carrot {
+    border-bottom: 1px solid $carrot-text-color;
+}
+
+.border-orange {
+    border-bottom: 1px solid $orange-text-color;
+}
+
+@media screen and (min-width:768px) {
+    .border-purple:after {
+        bottom: -15%;
+        left: 5%;
+    }
+}
+
+@media screen and (min-width:992px) {
+    .border-purple:after {
+        left: 45%;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .border-purple:after {
+        bottom: -10%;
+    }
+    .navbar .nav-item .nav-link {
+        text-align: center;
+        padding: 14px 22px 8px 24px
+    }
+}
+
+@media screen and (max-width:768px) {
+    .header-logo {
+        width: 200px;
+        height: auto;
+    }
+    .border-purple:after {
+        bottom: -12%;
+        left: 5%;
+    }
 }
 
 // focus hover nav-menu
-
 .navbar-nav .nav-item:first-child .nav-link:focus,
-.navbar-nav .nav-item:first-child .nav-link:hover{
-  color: $blue-text-color;
+.navbar-nav .nav-item:first-child .nav-link:hover {
+    color: $blue-text-color;
 }
+
 .navbar-nav .nav-item:nth-child(2) .nav-link:focus,
-.navbar-nav .nav-item:nth-child(2) .nav-link:hover{
-  color: $purple-text-color;
+.navbar-nav .nav-item:nth-child(2) .nav-link:hover {
+    color: $purple-text-color;
 }
+
 .navbar-nav .nav-item:nth-child(3) .nav-link:focus,
-.navbar-nav .nav-item:nth-child(3) .nav-link:hover{
-  color: $green-text-color;
+.navbar-nav .nav-item:nth-child(3) .nav-link:hover {
+    color: $green-text-color;
 }
+
 .navbar-nav .nav-item:nth-child(4) .nav-link:focus,
-.navbar-nav .nav-item:nth-child(4) .nav-link:hover{
-  color: $carrot-text-color;
+.navbar-nav .nav-item:nth-child(4) .nav-link:hover {
+    color: $carrot-text-color;
 }
+
 .navbar-nav .nav-item:nth-child(5) .nav-link:focus,
-.navbar-nav .nav-item:nth-child(5) .nav-link:hover{
-  color: $orange-text-color;
+.navbar-nav .nav-item:nth-child(5) .nav-link:hover {
+    color: $orange-text-color;
 }
