--- a/sass/components/_text-product-description.scss
+++ b/sass/components/_text-product-description.scss
@@ -1,17 +1,15 @@
 .product-description {
-h2{
-
-      font-size: 24px;
-      line-height: 18px;
-      font-family: "Segoe UI Light";
-      font-weight: 400;
-      color: #000;
-  }
-  p{
-    font-size: 14px;
-    font-family:"Segoe UI";
-    font-weight: 400;
-    color: #000;
-line-height: 18px;
-  }
+    h2 {
+        margin-top: 20px;
+        font-size: 24px;
+        font-family: "Segoe UI Light";
+        color: #000;
+    }
+    p {
+        font-size: 14px;
+        font-family: "Segoe UI";
+        font-style: "Regular";
+        color: #000;
+        line-height: 18px;
+    }
 }
