--- a/sass/general/_container.scss
+++ b/sass/general/_container.scss
@@ -1,30 +1,42 @@
-
-ul{
-  list-style-type: none;
+* {
+    padding: 0px;
 }
 
-.navbar{
-  padding:0px;
-  margin: 0px;
+ul {
+    list-style-type: none;
 }
 
-  .container{
+.navbar {
+    padding: 0px;
+    margin: 0px;
+}
+
+.container {
     margin-left: auto;
     margin-right: auto;
-    @media screen and (min-width:720px){
-      padding-left: 70px;
-      padding-right: 70px;
+    @media screen and (min-width: 992px) {
+        padding-left: 70px;
+        padding-right: 70px;
     }
+    @media screen and (max-width: 768px) {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    @media screen and (max-width: 576px) {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
 
-  }
-
-  .mt-5 {
+.mt-5,
+.mt-md-5 {
     margin-top: ($spacer * 3) !important;
-  }
-  .ml-5 {
-    margin-left: ($spacer * 3) !important;
-  }
+}
 
-button{
-  cursor: pointer;
+.ml-5 {
+    margin-left: ($spacer * 3) !important;
+}
+
+button {
+    cursor: pointer;
 }
