--- a/css/main.css
+++ b/css/main.css
@@ -223,10 +223,8 @@ h1 {
 
 .form-control {
   position: relative;
-  color: #ccc;
   border: 1px solid #ccc;
   padding: 18px 75px 18px 5px;
-  border-radius: 0px;
   font-size: 12px;
   font-family: "Arial Regular";
   font-weight: 400;
@@ -369,19 +367,39 @@ h1 {
 }
 
 @media screen and (max-width: 1200px) {
+  h1 {
+    font-size: 30px;
+  }
   .btn-dovnload-price {
-    padding: 10px 120px 8px 120px;
+    padding: 10px 0px 8px 10px;
   }
   .label-form-search > .form-control {
-    padding: 18px 120px 18px 120px;
+    padding: 18px 0px 18px 10px;
   }
   .block-img {
     margin-top: 28px;
     padding: 29px 16px 34px 150px;
   }
+  .btn-download,
+  .btn-example {
+    width: 100%;
+  }
+  .svg-arrow {
+    margin-left: 520px;
+  }
+  .svg-video-arrow {
+    margin-left: 98px;
+  }
 }
 
 @media screen and (max-width: 992px) {
+  .block-button-left-hero {
+    margin-top: 28px;
+  }
+  .btn-download,
+  .btn-example {
+    width: 100%;
+  }
   .btn-dovnload-price {
     padding: 10px 60px 8px 60px;
   }
@@ -392,9 +410,19 @@ h1 {
     margin-top: 28px;
     padding: 29px 16px 34px 60px;
   }
+  .svg-arrow {
+    margin-left: 625px;
+  }
+  .svg-video-arrow {
+    margin-left: 65px;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  .block-left-button {
+    padding-right: 0px;
+    margin-bottom: 28px;
+  }
   .btn-download,
   .btn-example {
     width: 100%;
@@ -420,7 +448,7 @@ h1 {
 
 @media screen and (max-width: 576px) {
   h1 {
-    font-size: 30px;
+    font-size: 24px;
   }
   .svg-arrow {
     margin-left: 20px;
@@ -429,11 +457,21 @@ h1 {
     margin-top: 15px;
     margin-left: 140px;
   }
+  .block-download-hero {
+    padding-right: 0px;
+  }
+  .block-search-hero {
+    padding-left: 0px;
+  }
   .btn-dovnload-price {
-    padding: 10px 5px 8px 5px;
+    padding: 10px 0px 8px 5px;
+    font-size: 12px;
+    margin-bottom: 28px;
   }
   .label-form-search > .form-control {
-    padding: 18px 5px 18px 5px;
+    padding: 18px 0px 18px 5px;
+    font-size: 12px;
+    margin-bottom: 10px;
   }
   .block-img {
     margin-top: 28px;
@@ -507,10 +545,8 @@ h1 {
 
 .info-message {
   position: relative;
-  padding: 16px 0px 12px 16px;
+  padding: 10px 0px 12px 16px;
   background-color: #c3325f;
-  font-size: 18px;
-  font-family: "Segoe UI Light";
   color: #FFF;
   line-height: 18px;
 }
@@ -520,7 +556,9 @@ h1 {
   height: 30px;
 }
 
-.info-message p {
+.info-message h5 {
+  font-size: 18px;
+  font-family: "Segoe UI Light";
   margin-left: 7px;
   margin-bottom: 0px;
 }
@@ -555,7 +593,7 @@ h1 {
   outline: 0;
   outline-offset: 0;
   border: 2px solid #ccc;
-  padding: 5px 0px 5px 0px;
+  padding: 5px 220px 5px 5px;
 }
 
 .form-group-input > select {
@@ -563,6 +601,16 @@ h1 {
   border: 2px solid #ccc;
   border-radius: 0px;
   padding: 2px 0px 3px 10px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  text-indent: 1px;
+  background: url("../../image/btnList.png") no-repeat right 4px center;
+  background-color: #ffffff;
+}
+
+.form-group-input > select::-ms-expand {
+  display: none;
 }
 
 .btn-send {
@@ -623,16 +671,35 @@ h1 {
 .form-control-textarea {
   color: #ccc;
   border: 2px solid #ccc;
-  padding: 5px 75px 15px 0px;
+  padding: 5px 535px 15px 5px;
   border-radius: 0px;
   font-size: 14px;
   font-family: "Segoe UI";
   font-weight: 500;
 }
 
+@media screen and (max-width: 1200px) {
+  .block-textarea {
+    margin-top: 18px;
+  }
+  .form-control-textarea {
+    padding: 5px 50px 15px 5px;
+  }
+}
+
 @media screen and (max-width: 576px) {
   .info-message {
     font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .info-message h5 {
+    font-size: 15px;
+    padding-right: 5px;
+  }
+  .form-group-input > input {
+    padding-right: 0px;
   }
 }
 
