--- a/sass/components/_section-form.scss
+++ b/sass/components/_section-form.scss
@@ -1,16 +1,16 @@
 .info-message {
     position: relative;
-    padding: 16px 0px 12px 16px;
+    padding: 10px 0px 12px 16px;
     background-color: #c3325f;
-    font-size: 18px;
-    font-family: "Segoe UI Light";
     color: #FFF;
     line-height: 18px;
     .paperplane {
         width: 30px;
         height: 30px;
     }
-    p {
+    & h5 {
+        font-size: 18px;
+        font-family: "Segoe UI Light";
         margin-left: 7px;
         margin-bottom: 0px;
     }
@@ -45,13 +45,20 @@
         outline: 0;
         outline-offset: 0;
         border: 2px solid #ccc;
-        padding: 5px 0px 5px 0px;
+        padding: 5px 220px 5px 5px;
     }
     &>select {
         height: auto;
         border: 2px solid #ccc;
         border-radius: 0px;
         padding: 2px 0px 3px 10px;
+        appearance: none;
+        text-indent: 1px;
+        background: url("../../image/btnList.png") no-repeat right 4px center;
+        background-color: #ffffff;
+    }
+    &>select::-ms-expand {
+        display: none;
     }
 }
 
@@ -88,15 +95,34 @@
 .form-control-textarea {
     color: #ccc;
     border: 2px solid #ccc;
-    padding: 5px 75px 15px 0px;
+    padding: 5px 535px 15px 5px;
     border-radius: 0px;
     font-size: 14px;
     font-family: "Segoe UI";
     font-weight: 500;
 }
 
+@media screen and (max-width:1200px) {
+    .block-textarea {
+        margin-top: 18px;
+    }
+    .form-control-textarea {
+        padding: 5px 50px 15px 5px;
+    }
+}
+
 @media screen and (max-width:576px) {
     .info-message {
         font-size: 15px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .info-message h5 {
+        font-size: 15px;
+        padding-right: 5px;
+    }
+    .form-group-input>input {
+        padding-right: 0px;
     }
 }
