--- a/css/main.css
+++ b/css/main.css
@@ -605,7 +605,9 @@ h1 {
      -moz-appearance: none;
           appearance: none;
   text-indent: 1px;
-  background: url(../../image/btnList.png) no-repeat right 4px center;
+  background: url("../../image/btnList.png") no-repeat right 4px center;
+  text-indent: 0.01px;
+  text-overflow: "";
   background-color: #ffffff;
 }
 
