--- a/sass/components/_section-form.scss
+++ b/sass/components/_section-form.scss
@@ -54,7 +54,9 @@
         padding: 2px 0px 3px 10px;
         appearance: none;
         text-indent: 1px;
-        background: url(../../image/btnList.png) no-repeat right 4px center;
+        background: url('../../image/btnList.png') no-repeat right 4px center;
+        text-indent: 0.01px;
+        text-overflow: "";
         background-color: #ffffff;
     }
     &>select::-ms-expand {
